[gd_scene load_steps=2 format=3 uid="uid://c68icmjcee41a"]

[ext_resource type="Script" uid="uid://cktcnbryyqm8d" path="res://Scripts/upgrades.gd" id="1_3b6sh"]

[node name="Upgrade_screen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3b6sh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.0
offset_top = -247.0
offset_right = 504.0
offset_bottom = 253.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="decrease_health_bt" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "-10"

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0.929412, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Upgrade Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="increase_health_bt" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "+10"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="decrease_maxspeed_bt" type="Button" parent="Panel/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "-5"

[node name="Label2" type="Label" parent="Panel/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0.741176, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Upgrade Max Speed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="increase_maxspeed_bt" type="Button" parent="Panel/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "+5"

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -38.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="decrease_speed_bt" type="Button" parent="Panel/VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "-5"

[node name="Label2" type="Label" parent="Panel/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0.741176, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Upgrade Speed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="increase_speed_bt" type="Button" parent="Panel/VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "+5"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/decrease_health_bt" to="." method="_on_decrease_health_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/increase_health_bt" to="." method="_on_increase_health_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/HBoxContainer/decrease_maxspeed_bt" to="." method="_on_decrease_maxspeed_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/HBoxContainer/increase_maxspeed_bt" to="." method="_on_increase_maxspeed_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer3/HBoxContainer/decrease_speed_bt" to="." method="_on_decrease_speed_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer3/HBoxContainer/increase_speed_bt" to="." method="_on_increase_speed_pressed"]
